--- a/gerenciamento-pets-frontend-main/package.json
+++ b/gerenciamento-pets-frontend-main/package.json
@@ -25,12 +25,13 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitest/coverage-v8": "^1.2.2",
     "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/test-utils": "^2.4.3",
+    "@vue/test-utils": "^2.4.4",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^23.0.1",
     "prettier": "^3.0.3",
+    "resize-observer-polyfill": "^1.5.1",
     "vite": "^5.0.10",
-    "vitest": "^1.0.4"
+    "vitest": "^1.2.2"
   }
 }
